fixed text wrap issue

--- a/site/assets/style.css
+++ b/site/assets/style.css
@@ -18,6 +18,7 @@ body,html {
     margin: 20px;
     color:white;
     font-family: "Roboto Mono";
+    overflow-wrap: break-word;
     background-color: var(--background-color);
 }
 
